--- a/.init_/requirements.txt
+++ b/.init_/requirements.txt
@@ -1,7 +1,6 @@
-geopandas==0.9.0
-matplotlib==3.4.3
-pandas==1.3.3
-pykafka==2.8.0
-river==0.7.1
-streamlit==1.16.0
+kafka-python==2.0.2
+streamlit==1.2.0
+geopandas==0.11.2
+matplotlib==3.5.1
+shapely==1.8.0
 
